--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 1</title>
+    <title>Page 2</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    
-    <ul class="gallery"></ul>
 
-<script src="./js/1-gallery.js" type="module"></script>
+
+
+<script src="./js/2-snackbar.js" type="module"></script>
+
   </body>
 </html>
