--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     
-<input type="text" id="datetime-picker" />
-<button type="button" data-start disabled >Start</button>
+<input class="input" type="text" id="datetime-picker" />
+<button class="button" type="button" data-start disabled >Start</button>
 
 <div class="timer">
   <div class="field">
