--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,7 +9,26 @@
   </head>
   <body>
 
+<form class="form">
+  <label class="delay">
+    Delay (ms)
+    <input class="delay-input" type="number" name="delay" required />
+  </label>
 
+  <fieldset class="fieldset">
+    <legend>State</legend>
+    <label  class="state-label">
+      <input class="radio-input"  type="radio" name="state" value="fulfilled" required />
+      Fulfilled
+    </label>
+    <label class="state-label">
+      <input class="radio-input" type="radio" name="state" value="rejected" required />
+      Rejected
+    </label>
+  </fieldset>
+
+  <button class="btn" type="submit">Create notification</button>
+</form>
 
 <script src="./js/2-snackbar.js" type="module"></script>
 
